tests/NormalTests/paczka1/fuzzy1/40405178.err
Error in line 1: QFeY A537 59,1
Error in line 20: WW4SX A529 62,8
Error in line 31: pSuL A537 43,4
